Zero build requires disabled warnings

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b109


        From hotspot/make/linux/makefiles/zeroshark.make

        # Suppress some warning flags that are normally turned on for hotspot,
        # because some of the zero code has not been updated accordingly.
        WARNING_FLAGS += -Wno-return-type \
          -Wno-format-nonliteral -Wno-format-security \
          -Wno-maybe-uninitialized

              Assignee:
              Severin Gehwolf
              Reporter:
              Coleen Phillimore
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: