8143245: Zero build requires disabled warnings 8022956: Clang: enable return type warnings on BSD

Based on work of Severin Gehwolf <sgehwolf@redhat.com> & Christian Thalinger <cthalinger@twitter.com> with additions for 7-only cases

Reviewed-by: dholmes, coleenp, sla